# pyfolioclient

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/pyfolioclient/: __init__.py  __version__.py  _decorators.py  _exceptions.py  exceptions.py  foliobaseclient.py  folioclient.py
tests/: test_baseclient.py  test_circulation.py  test_users.py
