[project]
name = "pyfolioclient"
dynamic = ["version"]
description = "Httpx client for FOLIO API"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Håkan Sundblad", email = "hakan.sundblad@liu.se" }
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.hatch.version]
path = "src/pyfolioclient/__version__.py"